# ADS-in-Python

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/adspy/builtins/: abs_.py  reversed_.py  sum_.py
src/adspy/data_structures/: queue.py  stack.py
src/adspy/flooding/: flood_fill.py
src/adspy/math/: abs.py  factorial.py  factorise.py  fibonacci.py  hypot.py  is_prime.py
src/adspy/puzzles/: hanoi_towers.py
src/adspy/searching/: binary_search.py  linear_search.py
src/adspy/sequences/: correct_delimeters.py  is_palindrome.py
src/adspy/sorting/: merge_sort.py
tests/: results.py
tests/builtins/: test_abs_.py  test_reversed_.py  test_sum_.py
tests/data_structures/: test_stack.py
tests/flooding/: test_flood_fill.py
tests/math/: test_abs.py  test_factorial.py  test_factorise.py  test_fibonacci.py  test_hypot.py  test_is_prime.py
tests/puzzles/: test_hanoi.py
tests/searching/: preconf.py  test_binary_search.py  test_linear_search.py
tests/sequences/: test_correct_delimeters.py  test_is_palindrome.py
tests/sorting/: test_bubble_sort.py  test_insertion_sort.py  test_merge_sort.py  test_selection_sort.py
