[project]
name = "adspy"
description = "Algorithms and Data Structures in Python programming language."
requires-python = ">=3.9"
authors = [
    {name = "Stanley Kudrow"},
]
license = {file = "LICENCE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = ["pytest"]
cov = ["coverage"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "adspy.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vvv"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
